# efibootguard

./: .editorconfig  .gitignore  CMakeLists.txt  cifuzz.yaml
.github/workflows/: cifuzz.yaml
fuzztests/: dic.dict  fuzztest.cpp
mocks/include/: config.h  version.h
mocks/src/: mocks.c
